# cyrus-imapd

./: .arcconfig  .clang-format  .dir-locals.el  .fixme_ignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .indent.pro  .mailmap  .travis.yml  CNAME  CONTRIBUTING.md  COPYING  COPYRIGHT  Doxyfile  INSTALL  Makefile.am  Makefile.in  README  README.andrew  README.git  README.in  README.md  README.ubuntu  SMakefile  acconfig.h  aclocal.m4  acsite.m4  autobuild.sh  configure  configure.ac  configure.in  libcyrus.pc.in  libcyrus_imap.pc.in  libcyrus_min.pc.in  libcyrus_sieve.pc.in  mkdebian.pl  streets
cyrus/: .cvsignore  COPYRIGHT  Makefile  Makefile.in  README  README.Y2K  README.andrew  SMakefile  acconfig.h  aclocal.m4  configure  configure.in
cyrus/IMAP-Cyrus/: Changes  Cyrus.pm  Cyrus.xs  MANIFEST  Makefile.PL  cyradm.sh
cyrus/IMAP-Cyrus/Cyrus/: tmp.pl
cyrus/IMAP-Cyrus/t/: 01-imclient.t
cyrus/SIEVE-Cyrus/: Changes  Cyrus.xs  sieveshell.pl  test.pl
cyrus/SIEVE/Cyrus/: Makefile.old  sieveshell.pl
cyrus/SIEVE/scripts/: installsieve.pl  sieveshell.pl
cyrus/SIEVE/timsieved/: Cyrus.xs  Makefile.in  exitcodes.h  lex.c  (+1 more)
cyrus/amssync/: Makefile.in  README  ams.c  amssync.c  amssync.h  hash.c  hash.h  imap.c  pioctl.c
cyrus/cmulocal-old/: Makefile.in  depot.conf
cyrus/contrib/: README  add-cyrus-user  deliver-notify-zephyr.patch  drac_auth.patch  fud-client.c  mupdate-test.pl  notify_unix.pl  sieve-spamasssassin  squatrunner.pl  squatrunner.txt
cyrus/cyradm/: Makefile.in  README  cyradm.1  cyradm.c  cyradmapp.c  cyrinit.tcl  cyrmain.c
cyrus/depot/: Makefile.in  depot.conf  rc.local.imap  rc.local.ptclient
cyrus/doc/: .cvsignore  Makefile  Makefile.dist  README  acl-extension  altnamespace.html  anoncvs.html  bugs  bugs.html  changes  changes.html  copyrights  cyrusv2.mc  faq.html  feedback.html  index.html  install  install-admin-mb.html  install-auth.html  install-compile.html  install-configure.html  install-murder.html  install-netnews.html  install-perf.html  install-prereq.html  install-replication.html  install-sieve.html  install-snmpmon.html  install-testing.html  install-upgrade.html  install-virtdomains.html  install.html  mailing-list.html  man.html  murder.fig  netnews.fig  notes.html  os.html  overview  overview.html  (+5 more)
cyrus/et/: Makefile.in  com_err.c  com_err.h  compile_et.sh  config_script  error_message.c  error_table.h  init_et.c
cyrus/imap/: .cvsignore  Makefile.dist  Makefile.in  acapmbox.c  acapmbox.h  acappush.c  acappush.h  annotate.c  annotate.h  append.c  append.h  arbitron.c  backend.c  backend.h  base64.c  chk_cyrus.c  cli_fatal.c  collectnews.c  config.c  config.h  convert_code.c  convert_code.h  ctl_cyrusdb.c  ctl_deliver.c  ctl_mboxlist.c  cvt_cyrusdb.c  cyr_dbtool.c  cyr_expire.c  cyr_synclog.c  cyr_virusscan.c  cyrdump.c  cyrrestore.c  deliver.c  delivered_prune.c  dump_deliver.c  duplicate.c  duplicate.h  expirenews.c  feedcyrus.in  fetchnews.c  (+144 more)
cyrus/imtest/: .cvsignore  Makefile.in  imtest.c  lmtptest.c  pop3test.c
cyrus/installsieve/: Makefile.in  codes.h  exitcodes.h  installscript.c  isieve.c  isieve.h  lex.c  lex.h  mystring.c  mystring.h  request.c  request.h
cyrus/lib/: .cvsignore  Makefile.dist  Makefile.in  acl.c  acl.h  acl_afs.c  acte.c  acte.h  acte_krb.c  assert.c  assert.h  auth.c  auth.h  auth_krb.c  auth_krb5.c  auth_krb_pts.c  auth_krb_pts.h  auth_pts.c  auth_pts.h  auth_unix.c  bsearch.c  bsearch.h  byteorder64.c  byteorder64.h  charset.c  charset.h  chartable.h  cyrusdb.c  cyrusdb.h  cyrusdb_berkeley.c  cyrusdb_db3.c  cyrusdb_flat.c  cyrusdb_quotalegacy.c  cyrusdb_skiplist.c  cyrusdb_sql.c  exitcodes.h  ftruncate.c  gai.h  getaddrinfo.c  getdtablesize.c  (+75 more)
cyrus/makedepend/: Makefile.in  configure  configure.in  cppsetup.c  def.h  ifparser.c  ifparser.h  include.c  install-sh  main.c  parse.c  pr.c
cyrus/man/: .cvsignore  Makefile.dist  Makefile.in  arbitron.8  chk_cyrus.8  collectnews.8  ctl_cyrusdb.8  ctl_deliver.8  ctl_mboxlist.8  cvt_cyrusdb.8  cyr_dbtool.8  cyr_expire.8  cyradm.1  cyrus.conf.5  deliver.8  expirenews.8  fetchnews.8  fud.8  idled.8  imapd.8  imapd.conf.5  imclient.3  imtest.1  installsieve.1  ipurge.8  krb.equiv.5  lmtpd.8  lmtptest.1  make_sha1.8  master.8  mbexamine.8  mbpath.8  mupdatetest.1  nntpd.8  nntptest.1  notifyd.8  pop3d.8  pop3test.1  quota.8  reconstruct.8  (+12 more)
cyrus/master/: .cvsignore  CYRUS-MASTER.mib  Makefile.in  README  config.h  cyrusMasterMIB.c  cyrusMasterMIB.h  master.c  master.h  masterconf.c  masterconf.h  message_uuid_master.c  message_uuid_master.h  service-thread.c  service.c  service.h
cyrus/netnews/: .cvsignore  Makefile.in  inn.diffs  macros.h  readconfig.c  readconfig.h  remotepurge.c  wildmat.c
cyrus/notifyd/: .cvsignore  Makefile.in  exitcodes.h  notify.h  notify_log.c  notify_log.h  notify_mailto.c  notify_mailto.h  notify_null.c  notify_null.h  notify_zephyr.c  notify_zephyr.h  notifyd.c  notifyd.h  notifytest.c  version.h
cyrus/perl/: Makefile.in
cyrus/ptclient/: Makefile.in  README  afskrb.c  doptclient  dump_ptc.c  ldap.c  ptdump.c  ptexpire.c  ptextract.c  ptloader.c  ptloader.h  test.c  test2.c
cyrus/pwcheck/: Makefile.in  README  pwcheck.c  pwcheck_getpwnam.c  pwcheck_getspnam.c
cyrus/snmp/: Makefile.in  README  listenstats.c  snmpgen  tugowar.c
cyrus/syslog/: Makefile.in  logger.1  logger.c  syslog.3  syslog.c  syslog.conf  syslog.h  syslogd.8  syslogd.c
cyrus/timsieved/: .cvsignore  Makefile.in  PROTOCOL.description  TODO  actions.c  actions.h  codes.h  config.c  config.h  exitcodes.h  global.h  lex.c  lex.h  mystring.c  mystring.h  parse.y  parser.c  parser.h  scripttest.c  scripttest.h  timsieved.c  token.c  version.h
cyrus/tools/: arbitronsort.pl  config2header  config2man  convert-sieve.pl  dohash  dohash.pl  masssievec  migrate-metadata  mkimap  mkimap.pl  mknewsgroups  mupdate-loadgen.pl  not-mkdep  rehash  translatesieve  undohash  undohash.pl  upgradesieve
doc/: bugs  (+59 more)
vzic/: Makefile.am  Makefile.vzic  vzic-dump.h  vzic-dump.pl  vzic-merge.pl  vzic-parse.c  vzic-parse.h  vzic.c  vzic.h  vzic_test.c
(+7277 files in other folders)
